--- a/index.html
+++ b/index.html
@@ -415,7 +415,9 @@
             <div class="col-sm-6">
                 <div class="row" id="last-img">
                     <img src="Rectangle 42.png" class="img-fluid">
-                    
+                    <div class="video-icon">
+                        <i class="bi bi-play-circle-fill"></i>
+                    </div>
                   </div>
                   </div>
 
